--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
 
     <link rel="stylesheet" href="StyleSheet.css">
     <title>
-    Charles Crandall, Resume test
+    Charles Crandall, Resume
     </title>
   </head>
 
