--- a/Index.html
+++ b/Index.html
@@ -11,13 +11,17 @@
 
   <body>
     <!--General info:Name, Permanent Address, Phone-->
+    <div class="Spacer">
+      <p> </p>
+    </div>
+
     <div class="Info">
       <div class="container">
         <img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xaf1/v/t1.0-9/268979_2246341160834_4976103_n.jpg?oh=1f49dabad935b6f85f8d78f6539eff93&oe=55380F86&__gda__=1433118127_ad6eb575231b9e45c852353f992865e7"; alt="My_Face...Book"; align="right"; style="width:180px;height:150px">
         <h1>Charles Crandall</h1>
         <p>32913 Spruce Rd</p>
         <p>Motley, MN 56466</p>
-        <p>218.839.9841</p>
+        <p>218-839-9841</p>
       </div>
     </div>
 
@@ -32,7 +36,7 @@
         <li>One year of programming in Python and Matlab experience.</li> 
         <li>Teamwork exercises and group projects.</li>
         <li>Researching strategies and skills.</li>
-        <li>asic understanding of how programming works.</li>
+        <li>Basic understanding of how programming works.</li>
  	    </div>
  	  </div>
 
@@ -76,29 +80,13 @@
         <div class="row">
 
           <div class="col-md-3">
-            <h4>Name</h4>
-          </div>
-          <div class="col-md-3">
-            <h4>Relation</h4>
-          </div>
-          <div class="col-md-3">
-            <h4>Contact</h4>
-          </div>
-          <div class="col-md-3">
-            <h4>Location</h4>
-          </div>
-        </div>
-
-        <div class="row">
-
-          <div class="col-md-3">
             <h5>Lori Dagle</h5>
           </div>
           <div class="col-md-3">
             <h5>Previous Manager</h5>
           </div>
           <div class="col-md-3">
-            <h5>612.807.5355</h5>
+            <h5>612-807-5355</h5>
           </div>
           <div class="col-md-3">
             <h5>East Bethel, MN</h5>
@@ -114,7 +102,7 @@
             <h5>Pastor, Family Friend</h5>
           </div>
           <div class="col-md-3">
-            <h5>218.639.5012</h5>
+            <h5>218-639-5012</h5>
           </div>
           <div class="col-md-3">
             <h5>Wadena, MN</h5>
@@ -130,7 +118,7 @@
             <h5>Family Friend, Works for 3M</h5>
           </div>
           <div class="col-md-3">
-            <h5>218.820.4756</h5>
+            <h5>218-820-4756</h5>
           </div>
           <div class="col-md-3">
             <h5>Staples, MN</h5>
