--- a/Index.html
+++ b/Index.html
@@ -29,10 +29,11 @@
  	  <!--Professional experience... Or lack thereof...-->
  	  <div class="Professional">
    	  <div class="container">
- 	    <h2>Programming Experience</h2>
+ 	    <h2>Education</h2>
  	    <h4>Minnesota State University of Moorhead</h4>
  	    <p>August 2013-May 2014</p>
  	    <ul>
+        <li>Two years at Central Lakes College, AA degree.</li>
         <li>One year of programming in Python and Matlab experience.</li> 
         <li>Teamwork exercises and group projects.</li>
         <li>Researching strategies and skills.</li>
