--- a/Index.html
+++ b/Index.html
@@ -30,10 +30,16 @@
  	  <div class="Professional">
    	  <div class="container">
  	    <h2>Education</h2>
+      <h4>Central Lakes College</h4>
+      <p>August 2011-May 2013</p>
+      <ul>
+        <li>Two year AA degree.</li>
+        <li><a>something, anything...</a></li>
+      </ul>
+
  	    <h4>Minnesota State University of Moorhead</h4>
  	    <p>August 2013-May 2014</p>
  	    <ul>
-        <li>Two years at Central Lakes College, AA degree.</li>
         <li>One year of programming in Python and Matlab experience.</li> 
         <li>Teamwork exercises and group projects.</li>
         <li>Researching strategies and skills.</li>
