--- a/Index.html
+++ b/Index.html
@@ -34,7 +34,7 @@
       <p>August 2011-May 2013</p>
       <ul>
         <li>Two year AA degree.</li>
-        <li><a>something, anything...</a></li>
+        <li>Worked part time job and maintained 'B' average.</li>
       </ul>
 
  	    <h4>Minnesota State University of Moorhead</h4>
