--- a/Index.html
+++ b/Index.html
@@ -33,8 +33,8 @@
       <h4>Central Lakes College</h4>
       <p>August 2011-May 2013</p>
       <ul>
-        <li>Two year AA degree.</li>
-        <li>Worked part time job and maintained 'B' average.</li>
+        <li>Two year AA degree in general education.</li>
+        <li>Maintained above a 'B' average.</li>
       </ul>
 
  	    <h4>Minnesota State University of Moorhead</h4>
