--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
 
     <div class="Info">
       <div class="container">
-        <img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xaf1/v/t1.0-9/268979_2246341160834_4976103_n.jpg?oh=1f49dabad935b6f85f8d78f6539eff93&oe=55380F86&__gda__=1433118127_ad6eb575231b9e45c852353f992865e7"; alt="My_Face...Book"; align="right"; style="width:180px;height:150px">
+        <img src="https://scontent.xx.fbcdn.net/hphotos-xtl1/v/t1.0-9/12088272_10207727366804977_3617967827628358312_n.jpg?oh=553f37ce0bf26c57c09af6eee67ebb78&oe=56ACADD0"; alt="My_Face...Book"; align="right"; style="width:180px;height:150px">
         <h1>Charles Crandall</h1>
         <p>32913 Spruce Rd</p>
         <p>Motley, MN 56466</p>
@@ -38,12 +38,14 @@
       </ul>
 
  	    <h4>Minnesota State University of Moorhead</h4>
- 	    <p>August 2013-May 2014</p>
+ 	    <p>August 2013-Present</p>
  	    <ul>
-        <li>One year of programming in Python and Matlab experience.</li> 
+        <li>One year of programming in Python.</li> 
+        <li>One year of Java GUI experience.</li>
+        <li>One year of C++ programming.</li>
         <li>Teamwork exercises and group projects.</li>
         <li>Researching strategies and skills.</li>
-        <li>Basic understanding of how programming works.</li>
+        <li>Intermediate competency with object oriented programming.</li>
  	    </div>
  	  </div>
 
@@ -61,7 +63,7 @@
         </ul>
 
         <h4>Village Inn, <a href="https://www.google.com/maps/@46.8481906,-96.7641324,16z">Moorhead, MN</a></h4>
-        <p>September 2013-Present</p>
+        <p>September 2013-August 2015</p>
         <ul>
           <li>Prioitizing tasks based on necessity, difficulty and time of operation.</li>
           <li>Meticulous cross checking and stage-by-stage updates/status checks.</li>
@@ -122,7 +124,7 @@
             <h5>Jeff DeGeest</h5>
           </div>
           <div class="col-md-3">
-            <h5>Family Friend, Works for 3M</h5>
+            <h5>Family Friend</h5>
           </div>
           <div class="col-md-3">
             <h5>218-820-4756</h5>
